<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <EditText
        android:id="@+id/EditTextView_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:visibility="gone"
        android:hint="Enter Name"
        android:padding="20dp" />

    <EditText
        android:id="@+id/EditTextView_Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:inputType="text"
        android:hint="@string/enter_age"
        android:padding="20dp" />
    <EditText
        android:id="@+id/EditTextView_City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/enter_city"
        android:padding="20dp" />
    <EditText
        android:id="@+id/EditTextView_Profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/enter_profession"
        android:padding="20dp" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ready to Code!"
        android:layout_margin="30dp"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/ButtonSubmit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="RUN CODE" />

        <Button
            android:id="@+id/ButtonReadData"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="READ DATA" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"/>


</LinearLayout>